# lake_merritt

./: .env.template  .gitignore  2025-06-19-dev-sesh-deets.md  AGENTS.md  AgentoOTEL-Ingester-and-Packs.md  LICENSE  README.md  agent_quality_eval_pack.yaml  lofty-evals-dev-plan.md  pyproject.toml  quick_start.md  quick_start_2.md  quick_start_3.md  requirements.txt  streamlit_app.py  streamlit_app_home.py  test_agent_debug_otel.json  test_csv_data.csv  test_otel_data.json  test_otel_pack.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: state.py
app/pages/: 1_config.py  2_eval_setup.py  3_results.py  4_downloads.py
core/: __init__.py  data_models.py  evaluation.py  generation.py  generation_handler.py  ingestion.py  logging_config.py  registry.py  reporting.py
core/aggregators/: __init__.py  base.py  bbq_bias_aggregator.py  fdl_metrics_aggregator.py
core/eval_pack/: __init__.py  compatibility.py  executor.py  loader.py  schema.py
core/ingestion/: __init__.py  agento_analytical_ingester.py  agento_generalized_ingester.py  csv_ingester.py  generic_otel_ingester.py  python_ingester.py
core/otel/: __init__.py  ingester.py
core/scoring/: __init__.py  base.py  choice_index_scorer.py  exact_match.py  fdl_alignment_scorer.py  fdl_disclosure_scorer.py  fuzzy_match.py  llm_judge.py  tool_usage_scorer.py
core/utils/: safe_expr.py  tracing.py
data/: duty_of_loyalty_benchmark-missing-column.csv  duty_of_loyalty_benchmark.csv
docs/: README.md  dev-plan.md  fixplan.md  otel-ingestion-guide.md
docs/.claude/: settings.json
docs/demos/: 0_OTEL-EvalPack-agento_general_eval-JINJA.yaml  Gemini-First‑Prong_Alignment_Check.yaml  Gemini-Plan_Quality_5‑Point_Judge.yaml  Gemini-Timeout_Revision_Diagnosis.yaml  input-only-claude-creative-marketing.csv  o3pro-First‑Prong_Alignment_Check.yaml  o3pro-Plan_Quality_5‑Point_Judge.yaml  o3pro-Timeout_Revision_Diagnosis.yaml
docs/eval-packs/: 0_0_Mode_A_MinEvalPack.yaml  0_agento_generalized_eval.yaml  OtherAPI-SimpleClaude-agento_plan_quality_eval.yaml  OtherAPI-SimpleGPT-agento_plan_quality_eval.yaml  OtherAPI-SimpleGemini-agento_plan_quality_eval.yaml  agento_run_%Y%m%dT%H%M%S%f.otlp-SemanticConvention-and-OpenInfrence.json  agento_run_%Y%m%dT%H%M%S%f.otlp.json  gemini-good-BETTER-agento_plan_quality_eval.yaml  schema-v1.md  z_agento_generalized_eval-modules-1-and-2-only.yaml
docs/mode-a/: generated_data_202507281032.csv
docs/mode-b/: input-only-claude-creative-marketing-version-2.csv
examples/data/: CC_ComplexProblemSolving-2.json  bluebook_citations.csv
fixtures/: manual_traces.json
for-claude/: eval_results_20250620_043511.csv  eval_results_20250620_043539_summary.md  eval_results_20250620_043546_detailed_scores.csv  logs-prototypejam-lake_merritt-main-streamlit_app.py-2025-06-20T04_09_49.497Z.txt  logs-prototypejam-lake_merritt-main-streamlit_app.py-2025-06-20T04_15_22.013Z.txt  logs-prototypejam-lake_merritt-main-streamlit_app.py-2025-06-20T04_27_50.546Z.txt  prototypejam-lake_merritt.txt
scripts/: export_metrics.py  fdl_templates.json  generate_fdl_dataset.py  ingest_bbq_jsonl.py
services/: __init__.py  llm_clients 2.py  llm_clients-old.py  llm_clients.py
test_packs/: 1_invalid_yaml_syntax.yaml  2_unknown_ingester.yaml  3_unknown_scorer.yaml  4_valid_pack.yaml  5_invalid_on_fail.yaml  bbq_eval_pack.yaml  bbq_path.txt  bbq_path_cloud.txt  fdl_eval_pack.yaml
tests/: conftest.py
utils/: __init__.py  file_cache.py  telemetry.py
(+118 files in other folders)
