# In file: pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-eval-workbench"
version = "0.1.0"
description = "Lake Merritt is a modular platform for evaluating AI models and applications"
readme = "README.md"
requires-python = ">=3.9, !=3.9.7"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.6.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0",
    "nest-asyncio>=1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
